<resources>
    <string name="app_name">Help App</string>

    //Login
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="butLogin">Login</string>
    <string name="butNotas">Personal Notes</string>
    <string name="LinkRegistar">Not registed yet? Click here</string>

    <string name="Titulo">Title</string>
    <string name="Desc">Desc</string>
    <string name="Hora">Hour and Date</string>

    <string name="Description">Description</string>

    <string name="butSave">Save Data</string>

    //Confirmação
    <string name="yes">Yes</string>
    <string name="done">Successfully removed everything!</string>
    <string name="doneone">Successfully removed!</string>
    <string name="no">No</string>
    <string name="deleteevery">Delete everything?</string>
    <string name="deleteone">Delete this note?</string>
    <string name="areyousure">Are you sure?</string>

    <string name="ValoresPreencher">Please fill all the fields</string>
    <string name="Criado">Created Successfully!</string>
    <string name="title_activity_visualizador_mapa">Map</string>

    <string name="passworderrada">Wrong Password!</string>
    <string name="preenchercampos">Please fill all the fields</string>
    <string name="butSavePonto">Save point</string>
    <string name="TipoPonto">Type of problem</string>
    <string name="InserirImagem">Insert Image</string>
    <string name="erro">Error creating new point!</string>
    <string name="selecionaImagem">Select image</string>
    <string name="uploadImagem">Save image</string>
    <string name="usernameerrada">Wrong username!</string>
    <string name="Mostrar">Show</string>
    <string name="mostrarallpoints">Show all points</string>
    <string name="voltar">Go Back</string>
    <string name="deleteMArker">Marker deleted!</string>
    <string name="cantdelete">You cant delete this marker</string>
    <string name="editar">Edit marker</string>
    <string name="cantedit">You cant edit this marker</string>
    <string name="alterado" >Marker edited</string>
    <string name="erroEditar" >Error editing marker</string>
    <string name="butEditPonto" >Edit Marker</string>
    <string name="deletepontopergunta" >Do you want to delete this marker?</string>

</resources>