<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".inserir_ponto">

    <Button
        android:id="@+id/butSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/butSavePonto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsert"
        app:layout_constraintVertical_bias="0.954" />

    <EditText
        android:id="@+id/pontoTit"
        android:layout_width="313dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/Titulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitulo" />

    <EditText
        android:id="@+id/pontoTipo"
        android:layout_width="313dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/labelTipo"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/labelTipo"
        app:layout_constraintTop_toBottomOf="@+id/labelTipo" />

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/TipoPonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pontoTit" />

    <EditText
        android:id="@+id/pontoDesc"
        android:layout_width="314dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Description"
        app:layout_constraintEnd_toEndOf="@+id/pontoTipo"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/pontoTipo"
        app:layout_constraintTop_toBottomOf="@+id/pontoTipo" />

    <TextView
        android:id="@+id/tituloImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/InserirImagem"
        app:layout_constraintEnd_toEndOf="@+id/pontoDesc"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/pontoDesc"
        app:layout_constraintTop_toBottomOf="@+id/pontoDesc" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="190dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tituloImagem"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/tituloImagem"
        app:layout_constraintTop_toBottomOf="@+id/tituloImagem"
        app:srcCompat="@drawable/rectangle" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:text="@string/selecionaImagem"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="@string/uploadImagem"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonSelect"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>