<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InserirNotas"
    android:background="@color/Background">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InserirNotas"
    android:background="@color/Background">

    <Button
        android:id="@+id/butSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/butSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescedit" />

    <EditText
        android:id="@+id/editTitEdit"
        android:layout_width="313dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/Titulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitulo" />

    <EditText
        android:id="@+id/editHoraDataedit"
        android:layout_width="313dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/Hora"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/labelHora"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/labelHora"
        app:layout_constraintTop_toBottomOf="@+id/labelHora" />

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Hora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitEdit" />

    <EditText
        android:id="@+id/editDescedit"
        android:layout_width="314dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Description"
        app:layout_constraintEnd_toEndOf="@+id/editHoraDataedit"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/editHoraDataedit"
        app:layout_constraintTop_toBottomOf="@+id/editHoraDataedit" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>